--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="shop.html">Каталог</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="aquel-tehnology.html">Технологии</a></li>
                 <li class="active-nav"><a href="about.html">О Нас</a></li>
                 <li><a href="#">Блог</a></li>
@@ -133,8 +133,8 @@
         <div class="infobar">
           <ul class="infobar__list">
             <li class="infobar__list-item"><a href="payment-and-shipping.html">Оплата и доставка</a></li>
-            <li class="infobar__list-item"><a href="shop.html">Каталог</a></li>
-            <li class="infobar__list-item"><a href="">Гарантия и обслуживание</a></li>
+            <li class="infobar__list-item"><a href="catalog.html">Каталог</a></li>
+            <li class="infobar__list-item"><a href="warranty-and-service.html">Гарантия и обслуживание</a></li>
           </ul>
         </div>
 
