--- a/catalog/aqua-air.html
+++ b/catalog/aqua-air.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
-    <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Фильтр для воды Aquel Zero</title>
+    <link type="text/css" rel="stylesheet" href="../css/bootstrap.css"  media="screen,projection">
+    <link type="text/css" rel="stylesheet" href="../css/style.css">
+    <title>Очиститель воздуха с функцией увлажнения</title>
   </head>
 
   <body>
@@ -26,15 +26,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="index.html">DEEP-AQUA</a>
+              <a class="navbar-brand animation-pulse" href="../index.html">DEEP-AQUA</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="shop.html">Каталог</a></li>
-                <li><a href="aquel-tehnology.html">Технологии</a></li>
-                <li><a href="about.html">О Нас</a></li>
+                <li><a href="../index.html">Главная</a></li>
+                <li><a href="../catalog.html">Каталог</a></li>
+                <li><a href="../aquel-tehnology.html">Технологии</a></li>
+                <li><a href="../about.html">О Нас</a></li>
                 <li><a href="#">Блог</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
@@ -49,14 +49,14 @@
           <div class="container-article">
 
             <div class="single-product__content-block">
-              <h1 class="single-product__title">Фильтр</h1>
-              <h2 class="single-product__sub-title">Aquel Zero</h2>
-              <p class="single-product__content">Идеально для любого места</p>
+              <h1 class="single-product__title">Очиститель воздуха</h1>
+              <h2 class="single-product__sub-title">Aqua Air</h2>
+              <p class="single-product__content">Идеально для дома и офиса</p>
               <p class="single-product__content">Бесплатная доставка, 7-10 дней</p>
               <p class="single-product__content">Не требует монтажа</p>
             </div>
             <div class="single-product__img-block">
-              <img class="single-product__img" src="img/small-aquel-zero-1.png" alt="">
+              <img class="single-product__img" src="../img/aqua-air.png" alt="">
             </div>
             <div class="single-product__button-wrapper">
               <a href="" class="btn btn-default btn--buy">ОФОРМИТЬ</a>
@@ -76,23 +76,20 @@
             </ul>
 
             <div class="tab-content">
-              <div role="tabpanel" class="tab-pane fade in active" id="description"><p><strong>Aquel Zero</strong> это революционно новая технология компактной фильтрации без необходимости подключения к водопроводу. Идеально подходит для офиса, семьи и индивидуального использования. Модель проста в обслуживании - одна панель управления всеми функциями, световая индикация состояния системы. Простая замена фильтрующих картриджей - "повернул, вынул, подключил новый",  справится даже подросток. Aquel Zero может быть установлен в любом удобном месте, занимает мало места. Для использования достаточно подключить электропитание и залить 4 литра любой воды и через 10 минут Вы получите совершенно чистую, минерализованную воду, объемом 2 литра!</p></div>
+              <div role="tabpanel" class="tab-pane fade in active" id="description"><p>Очиститель воздуха с функцией увлажнения. Срок службы и время уборки может меняться в зависимости от обстоятельств и места расположения. Мы рекомендуем сервисное обслуживание квалифицированным консультантом фирмы AQUEL.</p>
+              </div>
               <div role="tabpanel" class="tab-pane fade" id="feature">
                 <p>
                   <ul>
-                    <li>1 ступень очистки - фильтр PP 5 микрон</li>
-                    <li>2 ступень очистки - угольный фильтр</li>
-                    <li>3 ступень очистки - мембрана обратного осмоса</li>
-                    <li>4 ступень - минерализация</li>
-                    <li>Нагнетательный насос UP - 7000</li>
-                    <li>Производительность мембраны - 12 литров в час</li>
-                    <li>Электропитание - 220 вольт</li>
-                    <li>Температура воды на входе : 5 - 45 градусов по Цельсию</li>
+                    <li>Зона охвата фильтрации: 30 м2</li>
+                    <li>Эффективность очистки пыли: размер частицы до 0,3 микрона</li>
+                    <li>Эффективность дезодорации: 76 %</li>
+                    <li>Интервал технического обслуживания: 12 месяцев</li>
                     <li>Размеры:
                       <ul>
-                        <li>высота: 415 мм.</li>
-                        <li>ширина: 250 мм.</li>
-                        <li>глубина: 380 мм.</li>
+                        <li>высота: 386 мм.</li>
+                        <li>ширина: 737 мм.</li>
+                        <li>диаметр: 486 мм.</li>
                       </ul>
                     </li>
                   </ul>
@@ -101,10 +98,13 @@
               <div role="tabpanel" class="tab-pane fade" id="advantages">
                   <p>
                     <ul>
-                      <li>AQ-82 Фильтрующий картридж 5 микрон - очищает от механических загрязнений</li>
-                      <li>AQ-92 Угольный фильтр CarbonBlock - очищает воду от хлора</li>
-                      <li>Мембрана обратного осмоса - очищает воду от металлов, нитритов, нитратов, бактерий и вирусов</li>
-                      <li>Обогащение минералами - обеспечивает обогащение воды необходимыми минералами, повышает pH</li>
+                      <li>Тип установки: внутри помещений</li>
+                      <li>Тип / модель: CHA- 500VH</li>
+                      <li>Тип питания: AC 230 В / 50 Гц</li>
+                      <li>Уровень шума: 45 дБ</li>
+                      <li>Вес: 11 кг</li>
+                      <li>Потребляемая мощность: 40 Вт</li>
+                      <li>Воздушный поток: 4,6 м3/мин</li>
                     </ul>
                   </p>
               </div>
@@ -112,18 +112,57 @@
               <div role="tabpanel" class="tab-pane fade" id="delivery">
                 <p>Доставка Товара до покупателя осуществляется бесплатно. Средний срок доставки 7 дней, максимальный срок доставки 30 дней с момента оплаты.
                 </p>
-                <p>Фильтр <strong>Aquel Zero</strong> может быть доставлен в любой город Российской Федерации и стран СНГ.</p>
+                <p>Очиститель воздуха <strong>Aqua Air</strong> может быть доставлен в любой город Российской Федерации и стран СНГ.</p>
               </div>
 
             </div>
           </div>
         </div>
 
+        <div class="card-block">
+          <h2 class="card-block__title">Что подойдет именно Вам?</h2>
+          <div class="divider-main divider-main--card"></div>
+
+          <div class="container-article">
+
+              <div class="card">
+                <a href="aquel-zero.html">
+                  <h3 class="card__title">Aquel Zero</h3>
+                  <p class="card__content">Мобилен и универсален</p>
+                  <div class="card__img">
+                    <img src="../img/small-aquel-zero-1.png" alt="">
+                  </div>
+                </a>
+              </div>
+
+              <div class="card">
+                <a href="aquel-1000.html">
+                  <h3 class="card__title">Aquel 1000</h3>
+                  <p class="card__content">Идеально для дома и офиса</p>
+                  <div class="card__img">
+                    <img src="../img/small-aquel-1000.png" alt="">
+                  </div>
+                </a>
+              </div>
+
+              <div class="card">
+                <a href="aquel-200.html">
+                  <h3 class="card__title">Aquel 200</h3>
+                  <p class="card__content">Лучший выбор для дома</p>
+                  <div class="card__img">
+                    <img src="../img/small-aquel-200.png" alt="">
+                  </div>
+                </a>
+              </div>
+
+          </div>
+        </div>
+
         <div class="infobar">
           <ul class="infobar__list">
-            <li class="infobar__list-item"><a href="payment-and-shipping.html">Оплата и доставка</a></li>
-            <li class="infobar__list-item"><a href="shop.html">Каталог</a></li>
-            <li class="infobar__list-item"><a href="">Гарантия и обслуживание</a></li>
+            <li class="infobar__list-item"><a href="../payment-and-shipping.html">Оплата и доставка</a></li>
+            <li class="infobar__list-item"><a href="../catalog.html">Каталог</a></li>
+            <li class="infobar__list-item"><a href="../warranty-and-service.html">Гарантия и обслуживание</a></li>
           </ul>
         </div>
 
@@ -160,8 +199,8 @@
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
               <li><a href="#">Договор оферта</a></li>
-              <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
-              <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
+              <li><a href="../certificate-of-quality.html">Сертификаты качества</a></li>
+              <li><a href="../privacy-policy.html">Политика конфиденциальности</a></li>
             </ul>
           </div>
 
@@ -174,7 +213,7 @@
               </span>
             </p>
             <div class="footer__payment-partner">
-              <img src="img/TinkoffBank_general_logo_2.png" alt="" width="200" height="200">
+              <img src="../img/TinkoffBank_general_logo_2.png" alt="" width="200" height="200">
             </div>
           </div>
 
@@ -193,8 +232,8 @@
     </div><!-- /.container -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="../js/bootstrap.js"></script>
+  <script type="text/javascript" src="../js/main.js"></script>
 
   </body>
 </html>
