--- a/catalog/aquel-200.html
+++ b/catalog/aquel-200.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
-    <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Водоочистительные системы Aquel</title>
+    <link type="text/css" rel="stylesheet" href="../css/bootstrap.css"  media="screen,projection">
+    <link type="text/css" rel="stylesheet" href="../css/style.css">
+    <title>Фильтр для воды Aquel 200 + UV + Энерджи</title>
   </head>
 
   <body>
@@ -26,14 +26,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="#">DEEP-AQUA</a>
+              <a class="navbar-brand animation-pulse" href="../index.html">DEEP-AQUA</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="catalog.html">Каталог</a></li>
-                <li><a href="aquel-tehnology.html">Технологии</a></li>
-                <li><a href="about.html">О Нас</a></li>
+                <li><a href="../index.html">Главная</a></li>
+                <li><a href="../catalog.html">Каталог</a></li>
+                <li><a href="../aquel-tehnology.html">Технологии</a></li>
+                <li><a href="../about.html">О Нас</a></li>
                 <li><a href="#">Блог</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
@@ -44,101 +45,136 @@
 
       <section class="main">
 
-        <div class="introduction">
-          <h1 class="introduction__title  animation-fadeIn">Лидер систем водоочистки в Европе</h1>
-          <span class="introduction__aquel-title animation-fadeIn">Aquel</span>
-          <div class="introduction__img">
+        <div class="single-product">
+          <div class="container-article">
 
+            <div class="single-product__content-block">
+              <h1 class="single-product__title">Фильтр</h1>
+              <h2 class="single-product__sub-title">Aquel 200</h2>
+              <p class="single-product__content">Идеально для дома</p>
+              <p class="single-product__content">Бесплатная доставка, 7-10 дней</p>
+              <p class="single-product__content">Монтаж за наш счет в 31 городе РФ</p>
+            </div>
+            <div class="single-product__img-block">
+              <img class="single-product__img" src="../img/small-aquel-200.png" alt="">
+            </div>
+            <div class="single-product__button-wrapper">
+              <a href="" class="btn btn-default btn--buy">ОФОРМИТЬ</a>
+            </div>
+
+          </div>
+        </div><!-- /.single-product -->
+
+        <div class="advantages">
+          <div class="container-article">
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+              <li role="presentation" class="active"><a href="#description" aria-controls="description" role="tab" data-toggle="tab">Описание</a></li>
+              <li role="presentation"><a href="#feature" aria-controls="feature" role="tab" data-toggle="tab">Характеристики</a></li>
+              <li role="presentation"><a href="#advantages" aria-controls="advantages" role="tab" data-toggle="tab">Преимущества</a></li>
+              <li role="presentation"><a href="#delivery" aria-controls="delivery" role="tab" data-toggle="tab">Доставка</a></li>
+            </ul>
+
+            <div class="tab-content">
+              <div role="tabpanel" class="tab-pane fade in active" id="description"><p>Основой фильтров для воды <strong>Aquel</strong> является полупроницаемая мембрана. Эта, первоначально  военная технология, постепенно, благодаря техническому прогрессу, находит путь в доступные по цене фильтрующие устройства для быта и промышленных предприятий. Величина самой маленькой известной бактерии на Земле составляет 0,009 микрона, величина самого маленького известного вируса 0,02 микрона. Отверстие в полупроницаемой мембране имеет диаметр 0,0005 микрона!</p>
+              <p>Единственное, что мембрана пропускает, это молекула воды и некоторое количество минералов и солей. Благодаря этому можно получить совершенно чистую воду из любого загрязненного источника. Так же, благодаря физическому явлению, называемому осмотическое давление, фильтры для воды <strong>Aquel</strong> не нуждаются для своей работы в электричестве, достаточно небольшого давления воды на входе.</p>
+              </div>
+              <div role="tabpanel" class="tab-pane fade" id="feature">
+                <p>
+                  <ul>
+                    <li>Пригоден для воды из городского водопровода</li>
+                    <li>Установка под умывальник или согласно планировке заказчика.</li>
+                    <li>Эффективность фильтрации до 192 литров в сутки (может быть увеличена до 576 литров в сутки)</li>
+                    <li>Оптимальные условия работы: температура воды на входе 10-30 градусов по Цельсию, давление 2,45 - 10,5 бар</li>
+                    <li>Эффективность фильтрации 85 - 98 %</li>
+                    <li>Размеры:
+                      <ul>
+                        <li>высота: 420 мм.</li>
+                        <li>ширина: 380 мм.</li>
+                        <li>глубина: 180 мм.</li>
+                      </ul>
+                    </li>
+                    <li>Размеры расширительного бака:
+                      <ul>
+                        <li>высота: 420 мм. (с краном)</li>
+                        <li>диаметр: 290 мм.</li>
+                      </ul>
+                    </li>
+                  </ul>
+                </p>
+              </div>
+              <div role="tabpanel" class="tab-pane fade" id="advantages">
+                  <p>
+                    <ul>
+                      <li>Механический фильтр PX 20</li>
+                      <li>Purtex PX 5 + CVCA (комбинация механического и угольного фильтра)</li>
+                      <li>Полупроницаемая мембрана</li>
+                      <li>Двухходовой клапан</li>
+                      <li>Накопительный бак 10 литров</li>
+                      <li>Ин-лайн фильтр</li>
+                      <li>Патрон для минерализации</li>
+                      <li>УФ лампа W4</li>
+                      <li>Основной кран (хром)</li>
+                      <li>Картридж Aquel Energy</li>
+                    </ul>
+                  </p>
+              </div>
+
+              <div role="tabpanel" class="tab-pane fade" id="delivery">
+                <p>Доставка Товара до покупателя осуществляется бесплатно. Средний срок доставки 7 дней, максимальный срок доставки 30 дней с момента оплаты.
+                </p>
+                <p>Фильтр <strong>Aquel 200</strong> может быть доставлен и смонтирован в следующих городах:</p>
+                <p class="advantages__delivery-content">Великий Новгород, Владимир, Екатеринбург, Иваново, Ижевск, Йошкар-Ола, Казань, Калининград, Калуга, Киров, Кострома, Махачкала, Москва, Нижний.Новгород, Набережные Челны, Омск, Пермь, Рыбинск, Самара, Саратов, Санкт-Петербург, Сургут, Сыктывкар, Тверь, Тольятти, Томск, Тула, Уфа, Ухта (Республика Коми), Чайковский, Чебоксары. А так же, Краснодарский край и Ставропольский край.</p>
+              </div>
+
+            </div>
           </div>
         </div>
 
-        <div class="infographics">
-
-            <!-- <h2 class="infographics__title">Инфографика</h1> -->
-
-              <div class="infographics__item-one">
-                <div class="infographics__item-icon glyphicon glyphicon-thumbs-down"></div>
-                <h4 class="infographics__item-title">Покупаете воду?</h4>
-                <ul class="infographics__item-content">
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                </ul>
-              </div>
-              <div class="divider-main"></div>
-              <div class="infographics__item-two">
-                <div class="infographics__item-icon glyphicon glyphicon-rub"></div>
-                <h4 class="infographics__item-title">Расходы:</h4>
-                <ul class="infographics__item-content">
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                </ul>
-              </div>
-              <div class="divider-main"></div>
-              <div class="infographics__item-three">
-                <div class="infographics__item-icon glyphicon glyphicon-thumbs-up"></div>
-                <h4 class="infographics__item-title">Преимущества Aquel</h4>
-                <ul class="infographics__item-content">
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                </ul>
-              </div>
-
-        </div><!-- /.infographics -->
-
-        <div class="advice">
+        <div class="card-block">
+          <h2 class="card-block__title">Что подойдет именно Вам?</h2>
+          <div class="divider-main divider-main--card"></div>
 
           <div class="container-article">
-            <h2 class="advice__title">Консультация</h1>
-            <p class="advice__content">Text</p>
-            <p class="advice__content">Text</p>
-          </div>
-          <div class="container-article">
-            <form class="advice__form" action="">
-              <div class="form-group">
-                <label class="label-first" for="first-name">Имя</label>
-                <input type="text" class="form-control" id="first-name" placeholder="Имя">
+
+              <div class="card">
+                <a href="aqua-air.html">
+                  <h3 class="card__title">Aqua Air</h3>
+                  <p class="card__content">Подходит для любого помещения</p>
+                  <div class="card__img">
+                    <img src="../img/aqua-air.png" alt="">
+                  </div>
+                </a>
               </div>
-              <div class="form-group">
-                <label class="label-two" for="tel">Телефон</label>
-                <input type="tel" class="form-control" id="tel" placeholder="Телефон">
+
+              <div class="card">
+                <a href="aquel-1000.html">
+                  <h3 class="card__title">Aquel 1000</h3>
+                  <p class="card__content">Идеально для дома и офиса</p>
+                  <div class="card__img">
+                    <img src="../img/small-aquel-1000.png" alt="">
+                  </div>
+                </a>
               </div>
-            </form>
-          </div>
-          <div class="button-wrapper">
-            <button type="submit" class="btn btn-default btn--form">ОБРАТНЫЙ ЗВОНОК</button>
-          </div>
 
-        </div><!-- /.advice -->
+              <div class="card">
+                <a href="aquel-zero.html">
+                  <h3 class="card__title">Aquel Zero</h3>
+                  <p class="card__content">Мобилен и универсален</p>
+                  <div class="card__img">
+                    <img src="../img/small-aquel-zero-1.png" alt="">
+                  </div>
+                </a>
+              </div>
 
-        <div class="promo-video">
-
-          <div class="promo__video">
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe src="https://player.vimeo.com/video/114642714?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>
-          </div>
-
-        </div><!-- /.promo-video -->
-
-        <div class="welcome-to-shop fadein-post">
-          <h2 class="welcome-to-shop__title">Добро пожаловать!</h2>
-          <p class="welcome-to-shop__subtitle">В мир чистой питьевой воды</p>
-          <div class="button-wrapper">
-            <a class="btn btn-default btn--welcome-to-shop" href="catalog.html" role="button">КАТАЛОГ</a>
           </div>
         </div>
 
         <div class="infobar">
           <ul class="infobar__list">
-            <li class="infobar__list-item"><a href="payment-and-shipping.html">Оплата и доставка</a></li>
-            <li class="infobar__list-item"><a href="catalog.html">Каталог</a></li>
-            <li class="infobar__list-item"><a href="warranty-and-service.html">Гарантия и обслуживание</a></li>
+            <li class="infobar__list-item"><a href="../payment-and-shipping.html">Оплата и доставка</a></li>
+            <li class="infobar__list-item"><a href="../catalog.html">Каталог</a></li>
+            <li class="infobar__list-item"><a href="../warranty-and-service.html">Гарантия и обслуживание</a></li>
           </ul>
         </div>
 
@@ -175,8 +211,8 @@
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
               <li><a href="#">Договор оферта</a></li>
-              <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
-              <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
+              <li><a href="../certificate-of-quality.html">Сертификаты качества</a></li>
+              <li><a href="../privacy-policy.html">Политика конфиденциальности</a></li>
             </ul>
           </div>
 
@@ -189,7 +225,7 @@
               </span>
             </p>
             <div class="footer__payment-partner">
-              <img src="img/TinkoffBank_general_logo_2.png" alt="" width="200" height="200">
+              <img src="../img/TinkoffBank_general_logo_2.png" alt="" width="200" height="200">
             </div>
           </div>
 
@@ -208,8 +244,8 @@
     </div><!-- /.container -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="../js/bootstrap.js"></script>
+  <script type="text/javascript" src="../js/main.js"></script>
 
   </body>
 </html>
