--- a/warranty-and-service.html
+++ b/warranty-and-service.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Фильтр для воды Aquel 1000</title>
+    <title>Гарантия и обслуживание</title>
   </head>
 
   <body>
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="shop.html">Каталог</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="aquel-tehnology.html">Технологии</a></li>
                 <li><a href="about.html">О Нас</a></li>
                 <li><a href="#">Блог</a></li>
@@ -45,85 +45,60 @@
 
       <section class="main">
 
-        <div class="single-product">
+        <div class="introduction introduction--warranty-and-service">
+          <h1 class="introduction__title animation-fadeIn">Гарантия и обслуживание</h1>
+          <p class="introduction__content introduction__content--warranty-and-service animation-fadeIn">Минимальная гарантия 5 лет</p>
+          <span class="introduction__aquel-title animation-fadeIn">
+            <svg version="1.1" width="130" height="130" x="0px" y="0px" viewBox="0 0 488.779 488.779" xml:space="preserve">
+              <g>
+                <path d="M434.539,221.226l-6-8.2c-6.6-9-6.7-21.2-0.2-30.3l5.9-8.3c9-12.7,4.8-30.5-8.9-37.9l-9-4.8c-9.8-5.3-15.2-16.2-13.3-27.2
+                l1.7-10.1c2.6-15.4-8.9-29.6-24.5-30.2l-10.2-0.4c-11.1-0.5-20.7-8-23.8-18.7l-2.8-9.8c-4.3-15-20.8-22.8-35.2-16.6l-9.4,4
+                c-10.2,4.4-22.1,1.8-29.6-6.5l-6.8-7.6c-10.4-11.6-28.7-11.5-38.9,0.3l-6.7,7.7c-7.3,8.4-19.2,11.2-29.5,7l-9.4-3.9
+                c-14.4-6-30.8,2.1-34.9,17.1l-2.7,9.8c-2.9,10.7-12.4,18.4-23.5,19.1l-10.2,0.6c-15.6,0.9-26.9,15.3-24,30.6l1.8,10
+                c2,11-3.2,22-12.9,27.4l-8.9,5c-13.7,7.6-17.6,25.4-8.4,38l6,8.2c6.6,9,6.7,21.2,0.2,30.3l-5.9,8.3c-9,12.7-4.8,30.5,8.9,37.9
+                l9,4.8c9.8,5.3,15.2,16.2,13.3,27.2l-1.7,10.1c-2.6,15.4,8.9,29.6,24.5,30.2l10.2,0.4c11.1,0.5,20.7,8,23.8,18.7l2.8,9.8
+                c4.3,15,20.8,22.8,35.2,16.6l9.4-4c10.2-4.4,22.1-1.8,29.6,6.5l6.8,7.6c10.4,11.6,28.7,11.5,38.9-0.3l6.7-7.7
+                c7.3-8.4,19.2-11.2,29.5-7l9.4,3.9c14.4,6,30.8-2.1,34.9-17.1l2.7-9.8c2.9-10.7,12.4-18.4,23.5-19.1l10.2-0.6
+                c15.6-0.9,26.9-15.3,24-30.6l-1.8-10c-2-11,3.2-22,12.9-27.4l8.9-5C439.839,251.726,443.739,233.826,434.539,221.226z
+                M244.239,329.226c-71.7,0-130-58.3-130-130s58.3-130,130-130s130,58.3,130,130S315.939,329.226,244.239,329.226z"/>
+                <path d="M380.039,361.126l-4.5,0.3l-2.2,8c-6.5,23.7-28.2,40.2-52.7,40.2c-7.2,0-14.2-1.4-20.8-4.1l-7.6-3.2l-2.4,2.8l37.1,67.5
+                c2.2,3.9,6,6.7,10.4,7.5l44.7,8.3c7,1.3,14-2.5,16.7-9.2l16.9-42.2c1.7-4.2,1.4-8.9-0.8-12.8L380.039,361.126z"/>
+                <path d="M191.739,406.226c-6.9,3-14.1,4.5-21.6,4.5c-24.2,0-45.8-16.2-52.5-39.4l-2.3-7.9l-8-0.3l-33.6,61.2
+                c-2.2,3.9-2.5,8.6-0.8,12.8l16.9,42.2c2.7,6.7,9.7,10.5,16.7,9.2l44.7-8.3c4.4-0.8,8.2-3.6,10.4-7.5l38.1-69.3l-0.3-0.3
+                L191.739,406.226z"/>
+                <path d="M319.139,191.926c0,0,7.5-11.7-2.2-20.6c-12.1-11.1-45-3.7-45-3.7l0,0c-2.3,0.4-4.7,0.9-7.3,1.5c0,0-11.4,5.3,0-29.2
+                s-7.6-39.9-15.6-39.9s-5.3,17.1-5.3,17.1s-17.1,47.1-33.4,59.6c-4.3,4.6-6.7,9.7-7.9,13.3c-2.6-2.2-5.9-3.5-9.5-3.5h-21.9
+                c-8.1,0-14.6,6.6-14.6,14.6v58.4c0,8.1,6.6,14.6,14.6,14.6h21.9c3,0,5.8-0.9,8.1-2.5c0.5-0.5,3.4-3.4,3.4-11.5v-36.3
+                c0,1.4,0.2,45,25.3,47.7c9,0.6,20.1,1.1,31.2,0.9c10.1,0.8,20.9,0.9,29.4-0.9c29-6.2,21.8-26.4,21.8-26.4
+                c15.7-11.8,6.8-26.5,6.8-26.5C332.739,204.126,319.139,191.926,319.139,191.926z"/>
+              </g>
+            </svg>
+          </span>
+        </div>
+
+        <div class="warranty-and-service">
           <div class="container-article">
 
-            <div class="single-product__content-block">
-              <h1 class="single-product__title">Фильтр</h1>
-              <h2 class="single-product__sub-title">Aquel 1000</h2>
-              <p class="single-product__content">Идеально для дома и офиса</p>
-              <p class="single-product__content">Бесплатная доставка, 7-10 дней</p>
-              <p class="single-product__content">Монтаж за наш счет в 31 городе РФ</p>
-            </div>
-            <div class="single-product__img-block">
-              <img class="single-product__img" src="img/small-aquel-1000.png" alt="">
-            </div>
-            <div class="single-product__button-wrapper">
-              <a href="" class="btn btn-default btn--buy">ОФОРМИТЬ</a>
+            <div class="warranty-and-service-card">
+              <h2 class="warranty-and-service__title"></h2>
+              <div class="divider-main divider-main--card"></div>
+              <p class="warranty-and-service__content"></p>
             </div>
 
-          </div>
-        </div><!-- /.single-product -->
-
-        <div class="advantages">
-          <div class="container-article">
-            <!-- Nav tabs -->
-            <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" class="active"><a href="#description" aria-controls="description" role="tab" data-toggle="tab">Описание</a></li>
-              <li role="presentation"><a href="#feature" aria-controls="feature" role="tab" data-toggle="tab">Характеристики</a></li>
-              <li role="presentation"><a href="#advantages" aria-controls="advantages" role="tab" data-toggle="tab">Преимущества</a></li>
-              <li role="presentation"><a href="#delivery" aria-controls="delivery" role="tab" data-toggle="tab">Доставка</a></li>
-            </ul>
-
-            <div class="tab-content">
-              <div role="tabpanel" class="tab-pane fade in active" id="description"><p><strong>Aquel 1000</strong> создан с использованием новейших технологий, гарантирует самое высокое качество очистки питьевой воды. Водоочистительное устройство имеет гарантию 5 лет, может быть установлено на столешницу кухни, в офисе или в любом удобном для Вас месте. Сервисное обслуживание раз в 10 месяцев, для контролирования и поддержания технических показателей. Aquel 1000 произведен в Чехии эксклюзивно по заказу компании Aquel с патентами на фильтрующие элементы и все модификации системы.</p></div>
-              <div role="tabpanel" class="tab-pane fade" id="feature">
-                <p>
-                  <ul>
-                    <li>Эффективность мембраны 98%</li>
-                    <li>Контроль минерализации</li>
-                    <li>Датчик утечки воды</li>
-                    <li>Ультрафиолетовая лампа 6 Вт</li>
-                    <li>Накопительный бак 8 литров</li>
-                    <li>Электронное оповещение о сервисном обслуживании</li>
-                    <li>Размеры:
-                      <ul>
-                        <li>высота: 445 мм.</li>
-                        <li>ширина: 360 мм.</li>
-                        <li>глубина: 370 мм.</li>
-                      </ul>
-                    </li>
-                  </ul>
-                </p>
-              </div>
-              <div role="tabpanel" class="tab-pane fade" id="advantages">
-                  <p>
-                    <ul>
-                      <li>Компактный, стильный дизайн</li>
-                      <li>Индикация всего фильтра, контроль срока эксплуатации</li>
-                      <li>Значения качества фильтрации воды</li>
-                      <li>Измерение давления воды, автоматический выбор режима работы</li>
-                      <li>Мощность оборудования  100 литров чистой воды в сутки</li>
-                    </ul>
-                  </p>
-              </div>
-
-              <div role="tabpanel" class="tab-pane fade" id="delivery">
-                <p>Доставка Товара до покупателя осуществляется бесплатно. Средний срок доставки 7 дней, максимальный срок доставки 30 дней с момента оплаты.
-                </p>
-                <p>Фильтр <strong>Aquel 1000</strong> может быть доставлен и смонтирован в следующих городах:</p>
-                <p class="advantages__delivery-content">Великий Новгород, Владимир, Екатеринбург, Иваново, Ижевск, Йошкар-Ола, Казань, Калининград, Калуга, Киров, Кострома, Махачкала, Москва, Нижний.Новгород, Набережные Челны, Омск, Пермь, Рыбинск, Самара, Саратов, Санкт-Петербург, Сургут, Сыктывкар, Тверь, Тольятти, Томск, Тула, Уфа, Ухта (Республика Коми), Чайковский, Чебоксары. А так же, Краснодарский край и Ставропольский край.</p>
-              </div>
-
+            <div class="warranty-and-service-card">
+              <h2 class="warranty-and-service__title"></h2>
+              <div class="divider-main divider-main--card"></div>
+              <p class="warranty-and-service__content"></p>
             </div>
+
           </div>
         </div>
 
         <div class="infobar">
           <ul class="infobar__list">
             <li class="infobar__list-item"><a href="payment-and-shipping.html">Оплата и доставка</a></li>
-            <li class="infobar__list-item"><a href="shop.html">Каталог</a></li>
-            <li class="infobar__list-item"><a href="">Гарантия и обслуживание</a></li>
+            <li class="infobar__list-item"><a href="catalog.html">Каталог</a></li>
+            <li class="infobar__list-item"><a href="warranty-and-service.html">Гарантия и обслуживание</a></li>
           </ul>
         </div>
 
