New product Aqua Air

--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Магазин - Фильтры для воды Aquel</title>
+    <title>Водоочистительные системы Aquel</title>
   </head>
 
   <body>
@@ -26,13 +26,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="index.html">DEEP-AQUA</a>
+              <a class="navbar-brand animation-pulse" href="#">DEEP-AQUA</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="index.html">Главная</a></li>
-                <li class="active-nav"><a href="catalog.html">Каталог</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="aquel-tehnology.html">Технологии</a></li>
                 <li><a href="about.html">О Нас</a></li>
                 <li><a href="#">Блог</a></li>
@@ -45,93 +44,52 @@
 
       <section class="main">
 
-        <div class="shop-showcase">
-
-          <div class="container-article">
-            <a href="catalog/aquel-1000.html">
-              <div class="shop-showcase__desc">
-                <h2 class="shop-showcase__title">Aquel 1000</h2>
-                <p class="shop-showcase__price">Price</p>
-              </div>
-              <div class="shop-showcase__thumb">
-                <img src="img/aquel-1000.png" width="" height="" alt="">
-              </div>
-            </a>
-          </div>
-
-          <div class="container-article">
-            <a href="catalog/aquel-zero.html">
-              <div class="shop-showcase__desc">
-                <h2 class="shop-showcase__title">Aquel Zero</h2>
-                <p class="shop-showcase__price">Price</p>
-              </div>
-              <div class="shop-showcase__thumb">
-                <img src="img/aquel-zero.png" width="" height="" alt="">
-              </div>
-            </a>
-          </div>
-
-          <div class="container-article">
-            <a href="catalog/aquel-200.html">
-              <div class="shop-showcase__desc">
-                <h2 class="shop-showcase__title">Aquel 200</h2>
-                <p class="shop-showcase__price">Price</p>
-              </div>
-              <div class="shop-showcase__thumb">
-                <img src="img/small-aquel-200.png" width="" height="" alt="">
-              </div>
-            </a>
-          </div>
-
-          <div class="container-article">
-            <a href="catalog/aqua-air.html">
-              <div class="shop-showcase__desc">
-                <h2 class="shop-showcase__title">Aqua Air</h2>
-                <p class="shop-showcase__price">Предзаказ</p>
-              </div>
-              <div class="shop-showcase__thumb">
-                <img src="img/aqua-air.png" width="" height="" alt="">
-              </div>
-            </a>
-          </div>
-
-        </div><!-- /.shop-showcase -->
-
-        <div class="feature">
-          <div class="container-article">
-
-            <div class="feature-item">
-              <div class="feature-item__icon glyphicon glyphicon-plane"></div>
-              <h2 class="feature-item__title">Доставка и монтаж</h2>
-              <p class="feature-item__desc">Бесплатно в удобное время</p>
-            </div>
-
-            <div class="feature-item">
-              <div class="feature-item__icon glyphicon glyphicon-ok"></div>
-              <h2 class="feature-item__title">Гарантия до 10 лет!</h2>
-              <p class="feature-item__desc">Европейское качество и надежность</p>
-            </div>
-
-            <div class="feature-item">
-              <div class="feature-item__icon glyphicon glyphicon-refresh"></div>
-              <h2 class="feature-item__title">Вернуть покупку?</h2>
-              <p class="feature-item__desc">Вы не захотите вернуть наш фильтр, но если надо, то без проблем</p>
-            </div>
-
-            <div class="feature-item">
-              <div class="feature-item__icon glyphicon glyphicon-headphones"></div>
-              <h2 class="feature-item__title">Поддержка онлайн 7/365</h2>
-              <p class="feature-item__desc">Мы рады Вам помочь, обращайтесь!</p>
-            </div>
-
-            <div class="feature-item">
-              <div class="feature-item__icon glyphicon glyphicon glyphicon-credit-card"></div>
-              <h2 class="feature-item__title">Защищенные платежи</h2>
-              <p class="feature-item__desc">Наши партнеры обеспечивают надежный процесс оплаты</p>
-            </div>
+        <div class="introduction">
+          <h1 class="introduction__title  animation-fadeIn">Лидер систем водоочистки в Европе</h1>
+          <span class="introduction__aquel-title animation-fadeIn">Aquel</span>
+          <div class="introduction__img">
 
           </div>
-        </div><!-- /.feature -->
+        </div>
+
+        <div class="infographics">
+
+            <!-- <h2 class="infographics__title">Инфографика</h1> -->
+
+              <div class="infographics__item-one">
+                <div class="infographics__item-icon glyphicon glyphicon-thumbs-down"></div>
+                <h4 class="infographics__item-title">Покупаете воду?</h4>
+                <ul class="infographics__item-content">
+                  <li>Text</li>
+                  <li>Text</li>
+                  <li>Text</li>
+                  <li>Text</li>
+                </ul>
+              </div>
+              <div class="divider-main"></div>
+              <div class="infographics__item-two">
+                <div class="infographics__item-icon glyphicon glyphicon-rub"></div>
+                <h4 class="infographics__item-title">Расходы:</h4>
+                <ul class="infographics__item-content">
+                  <li>Text</li>
+                  <li>Text</li>
+                  <li>Text</li>
+                  <li>Text</li>
+                </ul>
+              </div>
+              <div class="divider-main"></div>
+              <div class="infographics__item-three">
+                <div class="infographics__item-icon glyphicon glyphicon-thumbs-up"></div>
+                <h4 class="infographics__item-title">Преимущества Aquel</h4>
+                <ul class="infographics__item-content">
+                  <li>Text</li>
+                  <li>Text</li>
+                  <li>Text</li>
+                  <li>Text</li>
+                </ul>
+              </div>
+
+        </div><!-- /.infographics -->
 
         <div class="advice">
 
@@ -157,6 +115,24 @@
           </div>
 
         </div><!-- /.advice -->
+
+        <div class="promo-video">
+
+          <div class="promo__video">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe src="https://player.vimeo.com/video/114642714?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+          </div>
+
+        </div><!-- /.promo-video -->
+
+        <div class="welcome-to-shop fadein-post">
+          <h2 class="welcome-to-shop__title">Добро пожаловать!</h2>
+          <p class="welcome-to-shop__subtitle">В мир чистой питьевой воды</p>
+          <div class="button-wrapper">
+            <a class="btn btn-default btn--welcome-to-shop" href="catalog.html" role="button">КАТАЛОГ</a>
+          </div>
+        </div>
 
         <div class="infobar">
           <ul class="infobar__list">
