--- a/catalog/aqua-air.html
+++ b/catalog/aqua-air.html
@@ -59,7 +59,11 @@
               <img class="single-product__img" src="../img/aqua-air.png" alt="">
             </div>
             <div class="single-product__button-wrapper">
-              <a href="" class="btn btn-default btn--buy">ОФОРМИТЬ</a>
+              <p class="single-product__pre-order-content">Предзаказ бесплатен, оставьте свой <strong>e-mail</strong> и мы оповестим Вас, когда <strong>Aqua Air</strong> поступит в продажу</p>
+              <form class="single-product__form-pre-order" action="">
+                <input type="email" name="email" placeholder="Ваш e-mail">
+                <button class="btn btn-default btn--buy">ПРЕДЗАКАЗ</button>
+              </form>
             </div>
 
           </div>
@@ -76,15 +80,22 @@
             </ul>
 
             <div class="tab-content">
-              <div role="tabpanel" class="tab-pane fade in active" id="description"><p>Очиститель воздуха с функцией увлажнения. Срок службы и время уборки может меняться в зависимости от обстоятельств и места расположения. Мы рекомендуем сервисное обслуживание квалифицированным консультантом фирмы AQUEL.</p>
+              <div role="tabpanel" class="tab-pane fade in active" id="description">
+                <p>Очиститель воздуха с функцией увлажнения. Этот уникальный очиститель воздуха AQUA AIR содержит 6 уровней фильтрации (очистка воздуха с помощью водной стены и УФ-лампы, предварительная фильтрация, фильтр антибиотиков, HEPA фильтр и дезодорирующий фильтр). AQUA AIR обеспечивает ощущение мира и спокойствия благодаря водному фонтану, а также ощущение свободы и свежести при взгляде на интерьер вашего дома. AQUA AIR также поможет поддерживать оптимальную влажность воздуха в вашем доме.</p>
               </div>
               <div role="tabpanel" class="tab-pane fade" id="feature">
                 <p>
                   <ul>
-                    <li>Зона охвата фильтрации: 30 м2</li>
-                    <li>Эффективность очистки пыли: размер частицы до 0,3 микрона</li>
-                    <li>Эффективность дезодорации: 76 %</li>
-                    <li>Интервал технического обслуживания: 12 месяцев</li>
+                    <li>Тип/модель: CHA-500VH</li>
+                    <li>Тип питания: AC 230 В / 50 Гц</li>
+                    <li>Потребление энергии: 40 Вт</li>
+                    <li>Площадь покрытия фильтрации: до 60 м2</li>
+                    <li>Эффективность удаления пыли: размер частиц от 0,3 мкм</li>
+                    <li>Эффективность очистки воздуха 99,97%</li>
+                    <li>Эффективность дезодорации: 76%</li>
+                    <li>Тип установки: в любом помещении</li>
+                    <li>Вес: 11 кг</li>
+                    <li>Интервалы сервиса: 12 месяцев</li>
                     <li>Размеры:
                       <ul>
                         <li>высота: 386 мм.</li>
@@ -98,11 +109,11 @@
               <div role="tabpanel" class="tab-pane fade" id="advantages">
                   <p>
                     <ul>
-                      <li>Тип установки: внутри помещений</li>
-                      <li>Тип / модель: CHA- 500VH</li>
-                      <li>Тип питания: AC 230 В / 50 Гц</li>
-                      <li>Уровень шума: 45 дБ</li>
-                      <li>Вес: 11 кг</li>
+                      <li>Ударная очистка с помощью водной стены и УФ-лампы – воздух ударяется об стену текущей воды, которая уносит мелкие частицы пыли размером до 0,3 мкм, а также формальдегид и летучие органические соединения, являющиеся одной из многих причин различных заболеваний. Также он удаляет аммиачный ацетальдегид и аналогичные соединения. УФ-лампа обеспечивает непрерывную дезинфекцию используемой воды</li>
+                      <li>Фильтр предварительной очистки отделяет грубые частицы (пыль, шерсть) от загрязненного воздуха. Он также предотвращает повреждение основных фильтров внутри устройства очистки воздуха на водной основе AQUA AIR</li>
+                      <li>Фильтр антибиотик содержит экстракт из орехов Гинкго, он улавливает и предотвращает появление плесени, бактерий и подобных нежелательных организмов, присутствующих в воздухе в жилых помещениях</li>
+                      <li>HEPA фильтр является лучшим типом воздушного фильтра. HEPA – высокоэффективный воздушный фильтр. Данный тип воздушного фильтра способен устранить из воздуха частицы, размерами меньше 300 нанометров с максимальной эффективностью 99,97%</li>
+                      <li> Дезодорирующий фильтр поглощает и подавляет запахи, бактерии и дезактивирует вирусы перед возвращением воздуха в помещение</li>
                       <li>Потребляемая мощность: 40 Вт</li>
                       <li>Воздушный поток: 4,6 м3/мин</li>
                     </ul>
