--- a/catalog/aquel-zero.html
+++ b/catalog/aquel-zero.html
@@ -56,7 +56,7 @@
               <p class="single-product__content">Не требует монтажа</p>
             </div>
             <div class="single-product__img-block">
-              <img class="single-product__img" src="../img/small-aquel-zero-1.png" alt="">
+              <img class="single-product__img" src="../img/aquel-zero.png" alt="">
             </div>
             <div class="single-product__button-wrapper">
               <a href="" class="btn btn-default btn--buy">ОФОРМИТЬ</a>
