--- a/index.html
+++ b/index.html
@@ -99,18 +99,18 @@
             <p class="advice__content">Text</p>
           </div>
           <div class="container-article">
-            <form class="advice__form" action="">
+            <form class="advice__form" id="form-consultation" action="">
               <div class="form-group">
                 <label class="label-first" for="first-name">Имя</label>
-                <input type="text" class="form-control" id="first-name" placeholder="Имя">
+                <input type="text" class="form-control" id="first-name" placeholder="Ваше Имя">
               </div>
               <div class="form-group">
                 <label class="label-two" for="tel">Телефон</label>
-                <input type="tel" class="form-control" id="tel" placeholder="Телефон">
+                <input type="tel" class="form-control" id="tel" placeholder="Ваш телефон">
               </div>
             </form>
           </div>
-          <div class="button-wrapper">
+          <div class="button-wrapper" form="form-consultation">
             <button type="submit" class="btn btn-default btn--form">ОБРАТНЫЙ ЗВОНОК</button>
           </div>
 
