--- a/catalog/aquel-1000.html
+++ b/catalog/aquel-1000.html
@@ -56,7 +56,7 @@
               <p class="single-product__content">Монтаж за наш счет в 31 городе РФ</p>
             </div>
             <div class="single-product__img-block">
-              <img class="single-product__img" src="../img/small-aquel-1000.png" alt="">
+              <img class="single-product__img" src="../img/aquel-1000.png" alt="">
             </div>
             <div class="single-product__button-wrapper">
               <a href="" class="btn btn-default btn--buy">ОФОРМИТЬ</a>
