--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="aquel-tehnology.html">Технологии</a></li>
                 <li class="active-nav"><a href="about.html">О Нас</a></li>
-                <li><a href="#">Блог</a></li>
+                <li><a href="blog.html">Блог</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
 
@@ -74,7 +74,7 @@
             <div class="about__card">
               <p class="about__title">ООО "Айнова"</p>
               <div class="divider-main divider-main--card"></div>
-              <p class="about__content">Интернет-магазин DeepAqua.ru принадлежит и управляется Обществом с ограниченной ответственностью "Айнова" и является официальным дилером компании "Аквел Ру" на территории Российской Федерации.</p>
+              <p class="about__content">Интернет-магазин DeepAqua.ru принадлежит и управляется Обществом с ограниченной ответственностью "Айнова" и является официальным дилером компании "Аквел Ру" на территории Российской Федерации. А главное, мы сами пьем чистую, фильтрованную воду и всем советуем поступать так же и заботиться о себе и близких.</p>
             </div>
 
             <div class="about__card">
@@ -86,6 +86,7 @@
                 <div class="divider-main divider-main--card divider-main--about"></div>
                 <li>Консультация:</li>
                 <li>9:00 - 19:00</li>
+                <li>Время московское</li>
                 <div class="divider-main divider-main--card divider-main--about"></div>
                 <li>Монтаж и обслуживание:</li>
                 <li>По согласованию</li>
