--- a/aquel-tehnology.html
+++ b/aquel-tehnology.html
@@ -35,7 +35,7 @@
                 <li><a href="catalog.html">Каталог</a></li>
                 <li class="active-nav"><a href="aquel-tehnology.html">Технологии</a></li>
                 <li><a href="about.html">О Нас</a></li>
-                <li><a href="#">Блог</a></li>
+                <li><a href="blog.html">Блог</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
 
@@ -49,7 +49,10 @@
           <div class="container-article animation-fadeIn">
             <h1 class="introduction__title">Инновационные технологии</h1>
              <span class="introduction__aquel-title">Aquel</span>
-            <div class="introduction__reading-time">Время чтения: 8 минут. <span class="reading-time">Важность - высокая.</span>
+             <div class="introduction__reading-time">Время чтения: 8 минут. <span class="reading-time">Важность - высокая.</span>
+            </div>
+            <div class="blog-teaser__social-wrapper">
+              <div class="ya-share2 blog-teaser__social" data-services="vkontakte,facebook,odnoklassniki,twitter"></div>
             </div>
           </div>
         </div>
@@ -215,6 +218,7 @@
 
     </div><!-- /.container -->
 
+  <script src="//yastatic.net/share2/share.js" async="async"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
