--- a/payment-and-shipping.html
+++ b/payment-and-shipping.html
@@ -35,7 +35,7 @@
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="aquel-tehnology.html">Технологии</a></li>
                 <li><a href="about.html">О Нас</a></li>
-                <li><a href="#">Блог</a></li>
+                <li><a href="blog.html">Блог</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
 
@@ -91,7 +91,7 @@
               <div class="divider-main divider-main--card"></div>
               <p class="payment-and-shipping__content">АО «Тинькофф Банк» защищает и обрабатывает данные Вашей банковской карты по стандарту безопасности PCI DSS. Передача информации в платежный шлюз происходит с применением технологии шифрования SSL. Дальнейшая передача информации происходит по закрытым банковским сетям, имеющим наивысший уровень надежности. АО «Тинькофф Банк» не передает данные Вашей карты нам и иным третьим лицам. Для дополнительной аутентификации держателя карты используется протокол 3D Secure».</p>
               <div class="divider-main divider-main--card"></div>
-              <p class="payment-and-shipping__content">В случае возникновения вопросов по совершенному платежу, Вы можете обратиться в службу поддержки клиентов по телефону: <a href="tel:+79063620702">+7 906 362 07 02</a></p>
+              <p class="payment-and-shipping__content">В случае возникновения вопросов по совершенному платежу, Вы можете обратиться в службу поддержки клиентов по телефону: <a href="tel:+79063620702">+7&nbsp906&nbsp362&nbsp07&nbsp02</a></p>
             </div>
 
             <div class="payment-and-shipping-card">
