--- a/warranty-and-service.html
+++ b/warranty-and-service.html
@@ -35,7 +35,7 @@
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="aquel-tehnology.html">Технологии</a></li>
                 <li><a href="about.html">О Нас</a></li>
-                <li><a href="#">Блог</a></li>
+                <li><a href="blog.html">Блог</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
 
@@ -47,7 +47,7 @@
 
         <div class="introduction introduction--warranty-and-service">
           <h1 class="introduction__title animation-fadeIn">Гарантия и обслуживание</h1>
-          <p class="introduction__content introduction__content--warranty-and-service animation-fadeIn">Минимальная гарантия 5 лет</p>
+          <p class="introduction__content introduction__content--warranty-and-service animation-fadeIn">Минимальная гарантия 5 лет на основные узлы</p>
           <span class="introduction__aquel-title animation-fadeIn">
             <svg version="1.1" width="130" height="130" x="0px" y="0px" viewBox="0 0 488.779 488.779" xml:space="preserve">
               <g>
@@ -80,15 +80,23 @@
           <div class="container-article">
 
             <div class="warranty-and-service-card">
-              <h2 class="warranty-and-service__title"></h2>
+              <h2 class="warranty-and-service__title">Гарантия</h2>
               <div class="divider-main divider-main--card"></div>
-              <p class="warranty-and-service__content"></p>
+              <p class="warranty-and-service__content">Компания гарантирует правильную и бесперебойную работу устройства и его составных частей в следующие сроки:
+              <ul>
+                <li>Корпус устройства (колбы фильтров, крепежная шина, кран бачка, кронштейны, трубки, гайки, тройники, переходники и т.д.) - 5 лет.</li>
+                <li>Осмотическая мембрана, фильтр Energy - 5 лет.</li>
+                <li>Резиновые и электрические детали (колба ультрафиолетовой лампы, насос, адаптер у УФ лампе, адаптер к насосу и электрические провода) - 2 года.</li>
+                <li>Ультрафиолетовая лампа - 20 месяцев.</li>
+                <li>Ин-лайн фильтр - 10 месяцев.</li>
+                <li>Доломит - 10 месяцев.</li>
+              </ul></p>
             </div>
 
             <div class="warranty-and-service-card">
-              <h2 class="warranty-and-service__title"></h2>
+              <h2 class="warranty-and-service__title">Обслуживание</h2>
               <div class="divider-main divider-main--card"></div>
-              <p class="warranty-and-service__content"></p>
+              <p class="warranty-and-service__content">Одним из обязательных условий гарантии является регулярное сервисное обслуживание 1 раз в 10 месяцев. Сервисное обслуживание выполняется техниками компании и включает в себя осмотр устройства, замену картриджей, замену доломита, замену ультрафиолетовой лампы 1 раз в 20 месяцев и дезинфекцию устройства. Данное сервисное обслуживание гарантирует высокое качество фильтруемой воды и долгий срок службы элементов фильтрующего устройства.</p>
             </div>
 
           </div>
