--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Водоочистительные системы Aquel</title>
+    <title>Блог о фильтрах, чистой воде, здоровье, о водоочистительных системах Aquel</title>
   </head>
 
   <body>
@@ -34,7 +34,7 @@
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="aquel-tehnology.html">Технологии</a></li>
                 <li><a href="about.html">О Нас</a></li>
-                <li><a href="#">Блог</a></li>
+                <li><a class="active-nav" href="blog.html">Блог</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
 
@@ -44,93 +44,154 @@
 
       <section class="main">
 
-        <div class="introduction">
-          <h1 class="introduction__title  animation-fadeIn">Лидер систем водоочистки в Европе</h1>
-          <span class="introduction__aquel-title animation-fadeIn">Aquel</span>
-          <div class="introduction__img">
-
+        <div class="introduction introduction--blog">
+          <h1 class="introduction__title animation-fadeIn">Блог</h1>
+          <p class="introduction__content introduction__content--blog animation-fadeIn">О воде, здоровье и фильтрах</p>
+          <span class="introduction__aquel-title animation-fadeIn">
+            <svg version="1.1"  x="0px" y="0px" width="130px" height="130px" viewBox="0 0 50 50"  xml:space="preserve">
+              <path d="M48.336,7.54c-0.701,0-1.359,0.007-2.018,0.024V5.326h-0.734c-14.262,0-19.043,3.411-20.585,5.252
+              c-1.542-1.841-6.323-5.252-20.585-5.252H3.68v2.237C3.022,7.545,2.364,7.54,1.664,7.54H0V39.89h1.664
+              c17.595,0,21.186,4.035,21.698,4.784h3.302c0.557-0.784,4.218-4.784,21.673-4.784H50V7.54H48.336z M23.899,38.431
+              c-2.457-1.812-7.611-3.914-18.383-4.054V7.175c15.087,0.194,18.001,4.327,18.383,5V38.431z M44.484,34.377
+              c-10.772,0.14-15.926,2.24-18.383,4.054V12.184c0.416-0.737,3.412-4.814,18.383-5.007V34.377z"/>
+            </svg>
+          </span>
+          <div class="blog-teaser__social-wrapper">
+            <div class="ya-share2 blog-teaser__social animation-fadeIn" data-services="vkontakte,facebook,odnoklassniki,twitter"></div>
           </div>
         </div>
 
-        <div class="infographics">
-
-            <!-- <h2 class="infographics__title">Инфографика</h1> -->
-
-              <div class="infographics__item-one">
-                <div class="infographics__item-icon glyphicon glyphicon-thumbs-down"></div>
-                <h4 class="infographics__item-title">Покупаете воду?</h4>
-                <ul class="infographics__item-content">
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                </ul>
-              </div>
-              <div class="divider-main"></div>
-              <div class="infographics__item-two">
-                <div class="infographics__item-icon glyphicon glyphicon-rub"></div>
-                <h4 class="infographics__item-title">Расходы:</h4>
-                <ul class="infographics__item-content">
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                </ul>
-              </div>
-              <div class="divider-main"></div>
-              <div class="infographics__item-three">
-                <div class="infographics__item-icon glyphicon glyphicon-thumbs-up"></div>
-                <h4 class="infographics__item-title">Преимущества Aquel</h4>
-                <ul class="infographics__item-content">
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                  <li>Text</li>
-                </ul>
-              </div>
-
-        </div><!-- /.infographics -->
-
-        <div class="advice">
-
+        <div class="blog">
           <div class="container-article">
-            <h2 class="advice__title">Консультация</h1>
-            <p class="advice__content">Text</p>
-            <p class="advice__content">Text</p>
-          </div>
-          <div class="container-article">
-            <form class="advice__form" action="">
-              <div class="form-group">
-                <label class="label-first" for="first-name">Имя</label>
-                <input type="text" class="form-control" id="first-name" placeholder="Имя">
-              </div>
-              <div class="form-group">
-                <label class="label-two" for="tel">Телефон</label>
-                <input type="tel" class="form-control" id="tel" placeholder="Телефон">
-              </div>
-            </form>
-          </div>
-          <div class="button-wrapper">
-            <button type="submit" class="btn btn-default btn--form">ОБРАТНЫЙ ЗВОНОК</button>
-          </div>
 
-        </div><!-- /.advice -->
+            <div class="blog-teaser">
 
-        <div class="promo-video">
+              <article class="blog-teaser__card">
+                <a class="blog-teaser__action" href="blog/butovue-filtru-dlya-vodu.html">
+                  <img class="blog-teaser__image" src="blog/post-image/butovue-filtru-dlay-vodu.jpg" width="790" height="400" alt="">
+                  <div class="blog-time-reading-wrapper">
+                    <div class="blog-time__reading">Время чтения: 6 минут</div>
+                  </div>
+                  <div class="blog-teaser__content-wrapper">
+                    <h2 class="blog-teaser__title">Бытовые фильтры для воды</h2>
+                    <div class="divider-main"></div>
+                    <p class="blog-teaser__content">Уже не первый раз ловите себя на мысли, что вода из под крана отдаёт специфическим запахом, а вкус ужасен? Значит, пришло время купить бытовые фильтры для воды, чтобы уберечь себя и своих близких от грязной воды.</p>
+                  </div>
+                </a>
+              </article>
 
-          <div class="promo__video">
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe src="https://player.vimeo.com/video/114642714?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>
-          </div>
+              <article class="blog-teaser__card">
+                <a class="blog-teaser__action" href="blog/vubor-filtra-dlya-vodu.html">
+                  <img class="blog-teaser__image" src="blog/post-image/vubor-filtra-dlya-vodu.jpg" width="790" height="400" alt="">
+                  <div class="blog-time-reading-wrapper">
+                    <p class="blog-time__reading">Время чтения: 5 минут</p>
+                  </div>
+                  <div class="blog-teaser__content-wrapper">
+                    <h2 class="blog-teaser__title">Выбор фильтра для воды</h2>
+                    <div class="divider-main"></div>
+                    <p class="blog-teaser__content">Известно, что водопроводная вода не всегда хорошего качества. Только представьте сколько плесени, песка и бактерий собирает она по водопроводным трубам до того как попасть в стакан.</p>
+                  </div>
+                </a>
+              </article>
 
-        </div><!-- /.promo-video -->
+              <article class="blog-teaser__card blog-teaser__card--full">
+                <a class="blog-teaser__action" href="blog/filtracia-vodu-v-kvartire.html">
+                  <img class="blog-teaser__image" src="blog/post-image/water-in-flat.jpg" width="790" height="400" alt="">
+                  <div class="blog-time-reading-wrapper">
+                    <p class="blog-time__reading">Время чтения: 7 минут</p>
+                  </div>
+                  <div class="blog-teaser__content-wrapper">
+                    <h2 class="blog-teaser__title">Фильтрация воды в квартире</h2>
+                    <div class="divider-main"></div>
+                    <p class="blog-teaser__content">Если вы решили перейти на употребление чистой воды, но никак не можете определиться, какой фильтр для очистки воды в квартире подойдёт вам? Не переживайте, сегодня мы поведаем о том, как найти оптимальный вариант.</p>
+                  </div>
+                </a>
+              </article>
 
-        <div class="welcome-to-shop fadein-post">
-          <h2 class="welcome-to-shop__title">Добро пожаловать!</h2>
-          <p class="welcome-to-shop__subtitle">В мир чистой питьевой воды</p>
-          <div class="button-wrapper">
-            <a class="btn btn-default btn--welcome-to-shop" href="catalog.html" role="button">КАТАЛОГ</a>
+              <article class="blog-teaser__card">
+                <a class="blog-teaser__action" href="">
+                  <img class="blog-teaser__image" src="blog/post-image/setchatue-kartridjnue-filtru.jpg" width="790" height="" alt="400">
+                  <div class="blog-time-reading-wrapper">
+                    <p class="blog-time__reading">Время чтения: 4 минуты</p>
+                  </div>
+                  <div class="blog-teaser__content-wrapper">
+                    <h2 class="blog-teaser__title">Сетчатые и картриджные фильтры</h2>
+                    <div class="divider-main"></div>
+                    <p class="blog-teaser__content">Для защиты водопроводных труб от механического износа и засорения рекомендуется использовать фильтры механической очистки. Они бывают сетчатые и картриджные. В этой статье мы подробно расскажем о таких водоочистительных приборах.</p>
+                  </div>
+                </a>
+              </article>
+
+              <article class="blog-teaser__card">
+                <a class="blog-teaser__action" href="">
+                  <img class="blog-teaser__image" src="blog/post-image/filtru-pod-moiky.jpg" width="790" height="400" alt="">
+                  <div class="blog-time-reading-wrapper">
+                    <p class="blog-time__reading">Время чтения: 4 минуты</p>
+                  </div>
+                  <div class="blog-teaser__content-wrapper">
+                    <h2 class="blog-teaser__title">Фильтры под мойку</h2>
+                    <div class="divider-main"></div>
+                    <p class="blog-teaser__content">Водопроводная вода без предварительной очистки часто мутного цвета с неприятным запахом. Пользуясь нефильтрованной водой в быту, сложно приготовить вкусную еду, ароматный кофе или чай. Без водоочистительных приборов нам не обойтись. Сегодня рынок радует обилием фильтров, различающихся по ценовой политике, функциям, по способу фильтрации и месту установки.</p>
+                  </div>
+                </a>
+              </article>
+
+              <article class="blog-teaser__card">
+                <a class="blog-teaser__action" href="">
+                  <img class="blog-teaser__image" src="blog/post-image/filtru-vodu-dlay-doma.jpg" width="790" height="400" alt="">
+                  <div class="blog-time-reading-wrapper">
+                    <p class="blog-time__reading">Время чтения: 4 минуты</p>
+                  </div>
+                  <div class="blog-teaser__content-wrapper">
+                    <h2 class="blog-teaser__title">Фильтры воды для дома</h2>
+                    <div class="divider-main"></div>
+                    <p class="blog-teaser__content">Вода — главная составляющая в жизни человека. В среднем за сутки мы потребляем 2-3 литра жидкости. Но какой? Часто, это нефильтрованная вода, содержащая в себе вредные вещества, которые поступают в организм. Как защитить здоровье от нежелательной опасности? Правильным решением этой проблемы будет установка фильтра.</p>
+                  </div>
+                </a>
+              </article>
+
+              <article class="blog-teaser__card">
+                <a class="blog-teaser__action" href="">
+                  <img class="blog-teaser__image" src="blog/post-image/filtered-water-in-cottage.jpg" width="790" height="400" alt="">
+                  <div class="blog-time-reading-wrapper">
+                    <p class="blog-time__reading blog-time__reading--black">Время чтения: 4 минуты</p>
+                  </div>
+                  <div class="blog-teaser__content-wrapper">
+                    <h2 class="blog-teaser__title">Очистка воды для дачи</h2>
+                    <div class="divider-main"></div>
+                    <p class="blog-teaser__content">Если вы строите дачу, первым делом  обдумайте водоснабжение. Как вариант, очищенную воду можно привозить с собой на дачу. Но такое решение проблемы подойдёт вам тогда, когда вы проводите мало времени в своём загородном доме. А что делать, если ваше время пребывания на даче длиться больше двух дней?</p>
+                  </div>
+                </a>
+              </article>
+
+              <article class="blog-teaser__card">
+                <a class="blog-teaser__action" href="">
+                  <img class="blog-teaser__image" src="blog/post-image/office-water-filtered.jpg" width="790" height="400" alt="">
+                  <div class="blog-time-reading-wrapper">
+                    <p class="blog-time__reading">Время чтения: 4 минуты</p>
+                  </div>
+                  <div class="blog-teaser__content-wrapper">
+                    <h2 class="blog-teaser__title">Фильтры для воды для офиса</h2>
+                    <div class="divider-main"></div>
+                    <p class="blog-teaser__content">Удивительно, но больше всего времени мы проводим на работе. В среднем рабочий день длится до 8 часов, иногда и дольше. Для полной концентрации ума мы чаще всего пьём  кофе или чай. Не задумывались о том, какую воду вы используете для приготовления этих двух напитков?</p>
+                  </div>
+                </a>
+              </article>
+
+              <article class="blog-teaser__card">
+                <a class="blog-teaser__action" href="">
+                  <img class="blog-teaser__image" src="blog/post-image/grubue-filtru-dlay-vodu.jpg" width="790" height="400" alt="">
+                  <div class="blog-time-reading-wrapper">
+                    <p class="blog-time__reading">Время чтения: 4 минуты</p>
+                  </div>
+                  <div class="blog-teaser__content-wrapper">
+                    <h2 class="blog-teaser__title">Грубые фильтры для воды</h2>
+                    <div class="divider-main"></div>
+                    <p class="blog-teaser__content">При употреблении воды без предварительной очистки, мы не обращаем внимание на то, какой вред наносим здоровью. Дело в том, что вода это главный растворитель для химических компонентов, которые оказывает негативное воздействие на внутренние органы человека.</p>
+                  </div>
+                </a>
+              </article>
+
           </div>
         </div>
 
@@ -207,9 +268,10 @@
 
     </div><!-- /.container -->
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
+  <script src="//yastatic.net/share2/share.js" async="async"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" async="async"></script>
+  <script type="text/javascript" src="js/bootstrap.js" async="async"></script>
+  <script type="text/javascript" src="js/main.js" async="async"></script>
 
   </body>
 </html>
