--- a/catalog/aquel-1000.html
+++ b/catalog/aquel-1000.html
@@ -35,7 +35,7 @@
                 <li><a href="../catalog.html">Каталог</a></li>
                 <li><a href="../aquel-tehnology.html">Технологии</a></li>
                 <li><a href="../about.html">О Нас</a></li>
-                <li><a href="#">Блог</a></li>
+                <li><a href="../blog.html">Блог</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
 
@@ -93,6 +93,7 @@
                         <li>глубина: 370 мм.</li>
                       </ul>
                     </li>
+                    <li>Производство: США</li>
                   </ul>
                 </p>
               </div>
