--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="aquel-tehnology.html">Технологии</a></li>
                 <li><a href="about.html">О Нас</a></li>
-                <li><a href="#">Блог</a></li>
+                <li><a href="blog.html">Блог</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
 
